# random_chess_puzzle

./: Cargo.toml  README.md  Rocket.toml  copy.rs
scripts/: description.md
src/: main.rs
src/controller/: mod.rs
src/service/: mod.rs
