[package]
name = "random_chess_puzzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1.0"
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-mongodb = "*"
rocket = "0.5.0-rc.1"
rocket_codegen = "0.5.0-rc.1"
serde = "1.0.133"
serde_derive = "1.0.113"
serde_json = "1.0.74"