[package]
name = "random_chess_puzzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1.0"
actix-web = "4.0.0-beta.18"
actix-rt = "2.5.1"
serde = "1.0.133"
bson = "2.1.0"
futures = "0.3.19"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
